--- a/MemberShip.html
+++ b/MemberShip.html
@@ -193,7 +193,7 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-60,Santra Devi,Pending"); 
         list.push("P1-Villa-61,Divanshi Dhanjani,Pending"); 
         list.push("P1-Villa-62,Lal Singh,Pending"); 
-        list.push("P1-Villa-63,Yogesh Ji,Pending"); 
+        list.push("P1-Villa-63,Yogesh Ji,Done"); 
         list.push("P1-Villa-64,Sahil Meghnani,Pending");
         list.push("P1-Villa-65,Jalaj Rajpurohit,Pending");
         list.push("P1-Villa-66,Manju Gehlot,Pending");
