--- a/MemberShip.html
+++ b/MemberShip.html
@@ -208,7 +208,7 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-72,Nikesh Chaudhary,Pending"); 
         list.push("P1-Villa-73,Richa Sharma,Fees_Only"); 
         list.push("P1-Villa-74,Praveen Kumar Prajapat,Pending"); 
-        list.push("P1-Villa-75,Archna Goswami,Fees_Only"); 
+        list.push("P1-Villa-75,Archna Goswami,Done"); 
         list.push("P1-Villa-76,Surya Nagal,Pending"); 
         list.push("P1-Villa-77,Devki Nandan Mathuriya,Pending"); 
         list.push("P1-Villa-78,Akshat Mangal,Pending"); 
