--- a/MemberShip.html
+++ b/MemberShip.html
@@ -138,56 +138,56 @@
      var list = [];
 
 list.push("P1-Villa-01,Pooja Sharma,Pending"); 
-        list.push("P1-Villa-04,Bhupesh Saini,Pending"); 
-        list.push("P1-Villa-05,Shishir Maltiyar,Pending"); 
+        list.push("P1-Villa-04,Bhupesh Saini,Fees_Only"); 
+        list.push("P1-Villa-05,Shishir Maltiyar,Fees_Only"); 
         list.push("P1-Villa-06,Hemant Kumar,Pending"); 
-        list.push("P1-Villa-07,Rahul Pandey,Pending"); 
-        list.push("P1-Villa-08,Anil Sharma,Pending"); 
+        list.push("P1-Villa-07,Rahul Pandey,Fees_Only"); 
+        list.push("P1-Villa-08,Anil Sharma,Fees_Only"); 
         list.push("P1-Villa-09,Raghvendra Sharma,Pending"); 
-        list.push("P1-Villa-10,Jogendra Sachdeva,Pending"); 
+        list.push("P1-Villa-10,Jogendra Sachdeva,Fees_Only"); 
         list.push("P1-Villa-11,Sundeep Mahala,Pending"); 
-        list.push("P1-Villa-12,Gaurav Kothari,Pending"); 
+        list.push("P1-Villa-12,Gaurav Kothari,Fees_Only"); 
         list.push("P1-Villa-13,Anil Sharma,Pending"); 
         list.push("P1-Villa-14,Ayush	Shandilya,Pending"); 
         list.push("P1-Villa-15,Sunil	Kumar,Pending"); 
         list.push("P1-Villa-16,Preeti Meena,Pending"); 
         list.push("P1-Villa-17,khushi Khandelwal,Pending"); 
-        list.push("P1-Villa-18,Pooja	Saxena,Pending"); 
-        list.push("P1-Villa-19,Hitesh Sain,Pending"); 
+        list.push("P1-Villa-18,Pooja	Saxena,Fees_Only"); 
+        list.push("P1-Villa-19,Hitesh Sain,Fees_Only"); 
         list.push("P1-Villa-20,Ved Prakash Parashar,Pending"); 
         list.push("P1-Villa-21,Dariya Singh,Pending"); 
         list.push("P1-Villa-22,Shivani sanjeev sharma,Pending"); 
         list.push("P1-Villa-23,Akshay Saraswat,Pending"); 
         list.push("P1-Villa-24,Abhimanyu Saraswat,Pending"); 
         list.push("P1-Villa-25,Pooja Khandelwal,Pending"); 
-        list.push("P1-Villa-26,Rakesh Kumar,Pending"); 
-        list.push("P1-Villa-27,Deepesh Sharma,Pending"); 
-        list.push("P1-Villa-28,Mohit Juneja,Pending"); 
+        list.push("P1-Villa-26,Rakesh Kumar,Fees_Only"); 
+        list.push("P1-Villa-27,Deepesh Sharma,Fees_Only"); 
+        list.push("P1-Villa-28,Mohit Juneja,Fees_Only"); 
         list.push("P1-Villa-29,Lokshita Mathur,Pending"); 
         list.push("P1-Villa-30,Peeyush Mathur,Pending"); 
         list.push("P1-Villa-31,Mahesh Taparia,Pending"); 
         list.push("P1-Villa-32,Peeyush Verma,Pending"); 
         list.push("P1-Villa-33,Prakash Joshi,Pending"); 
         list.push("P1-Villa-34,Vijay Meena,Pending"); 
-        list.push("P1-Villa-35,D V Saraswat & Kusum Saraswat,Pending"); 
+        list.push("P1-Villa-35,D V Saraswat & Kusum Saraswat,Fees_Only"); 
         list.push("P1-Villa-36,Harish Kumar Yadav,Pending"); 
-        list.push("P1-Villa-37,Gajendra Sharma,Pending"); 
+        list.push("P1-Villa-37,Gajendra Sharma,Fees_Only"); 
         list.push("P1-Villa-38,ManishaSingh,Pending"); 
-        list.push("P1-Villa-39,Manish Salvi,Pending"); 
+        list.push("P1-Villa-39,Manish Salvi,Fees_Only"); 
         list.push("P1-Villa-40,Anita Kanwar,Pending"); 
         list.push("P1-Villa-41,Monika Mittal,Pending"); 
-        list.push("P1-Villa-42,Prakash Gaur,Pending"); 
+        list.push("P1-Villa-42,Prakash Gaur,Fees_Only"); 
         list.push("P1-Villa-43,Arun Tripathi,Pending"); 
         list.push("P1-Villa-44,Ravindra Verma,Pending"); 
         list.push("P1-Villa-45,Nand Singh Rajawat,Pending"); 
-        list.push("P1-Villa-46,Vikas Mahala,Pending"); 
+        list.push("P1-Villa-46,Vikas Mahala,Fees_Only"); 
         list.push("P1-Villa-47,Manoj Ji,Pending"); 
         list.push("P1-Villa-48,R C Sharma ,Pending"); 
         list.push("P1-Villa-49,Sunita Verma,Pending"); 
         list.push("P1-Villa-50,Abhishek Garg,Pending"); 
         list.push("P1-Villa-51,Jatin Kumar,Pending"); 
         list.push("P1-Villa-52,Shailesh Bansal,Pending"); 
-        list.push("P1-Villa-53,Rohit Jain,Pending"); 
+        list.push("P1-Villa-53,Rohit Jain,Fees_Only"); 
         list.push("P1-Villa-54,Vinod Kumar Garg,Pending"); 
         list.push("P1-Villa-55,Raj Kamal,Pending"); 
         list.push("P1-Villa-56_57A,Kajor Mal Goyal,Pending"); 
@@ -198,28 +198,28 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-62,Lal Singh,Pending"); 
         list.push("P1-Villa-63,Yogesh Ji,Done"); 
         list.push("P1-Villa-64,Sahil Meghnani,Pending");
-        list.push("P1-Villa-65,Jalaj Rajpurohit,Pending");
+        list.push("P1-Villa-65,Jalaj Rajpurohit,Fees_Only");
         list.push("P1-Villa-66,Manju Gehlot,Pending");
-        list.push("P1-Villa-67,Abhishek Jaiman,Pending"); 
-        list.push("P1-Villa-68,Shrish Jaiman,Pending"); 
-        list.push("P1-Villa-69,Piyush Sharma,Fees_Only"); 
-        list.push("P1-Villa-70,Vineet Sharma,Pending"); 
+        list.push("P1-Villa-67,Abhishek Jaiman,Fees_Only"); 
+        list.push("P1-Villa-68,Shrish Jaiman,Fees_Only"); 
+        list.push("P1-Villa-69,Piyush Sharma,Done"); 
+        list.push("P1-Villa-70,Vineet Sharma,Done"); 
         list.push("P1-Villa-71,Suresh kumar Sharma,Pending"); 
         list.push("P1-Villa-72,Nikesh Chaudhary,Pending"); 
-        list.push("P1-Villa-73,Richa Sharma,Fees_Only"); 
+        list.push("P1-Villa-73,Richa Sharma,Done"); 
         list.push("P1-Villa-74,Praveen Kumar Prajapat,Pending"); 
         list.push("P1-Villa-75,Archna Goswami,Done"); 
         list.push("P1-Villa-76,Surya Nagal,Pending"); 
-        list.push("P1-Villa-77,Devki Nandan Mathuriya,Pending"); 
+        list.push("P1-Villa-77,Devki Nandan Mathuriya,Fees_Only"); 
         list.push("P1-Villa-78,Akshat Mangal,Pending"); 
         list.push("P1-Villa-79,Rahul Peswani,Pending"); 
         list.push("P1-Villa-80,Rahul Peswani,Pending"); 
         list.push("P1-Villa-81,Mamta Sharma,Pending"); 
-        list.push("P1-Villa-82,Swati Bansal,Pending"); 
+        list.push("P1-Villa-82,Swati Bansal,Fees_Only"); 
         list.push("P1-Villa-83,Tarun Sharda,Pending"); 
         list.push("P1-Villa-84,Tarun Sharda,Pending"); 
         list.push("P1-Villa-85,Pradeep Verma,Pending"); 
-        list.push("P1-Villa-86,Surendra Agrawal,Pending"); 
+        list.push("P1-Villa-86,Surendra Agrawal,Fees_Only"); 
         list.push("P1-Villa-87,Devendra Singh,Pending"); 
         list.push("P1-Villa-88,Pankaj Chauhan & Pushpa Tomar,Pending"); 
         list.push("P1-Villa-89,Khem Chand Nagal,Pending"); 
@@ -230,19 +230,19 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-94,Rounak Rajendra Bhatt,Pending"); 
         list.push("P1-Villa-95,Deepti Sharma,Pending"); 
         list.push("P1-Villa-96,George Pal Singh,Pending"); 
-        list.push("P1-Villa-97,Surendra Kumawat,Pending"); 
-        list.push("P1-Villa-98,Hitesh Jain,Pending"); 
+        list.push("P1-Villa-97,Surendra Kumawat,Fees_Only"); 
+        list.push("P1-Villa-98,Hitesh Jain,Fees_Only"); 
         list.push("P1-Villa-99,Sakshi Singh,Pending"); 
-        list.push("P1-Villa-100,Akansha Garg,Pending"); 
+        list.push("P1-Villa-100,Akansha Garg,Fees_Only"); 
         list.push("P1-Villa-101,Laxmi Agarwal,Pending"); 
         list.push("P1-Villa-102,Pratima Singh,Pending"); 
         list.push("P1-Villa-103,Vandana Soni,Pending"); 
-        list.push("P1-Villa-104,Rajender Singh,Pending"); 
+        list.push("P1-Villa-104,Rajender Singh,Fees_Only"); 
         list.push("P1-Villa-105,Vandana Soni,Pending"); 
         list.push("P1-Villa-106,Vandana Soni,Pending"); 
         list.push("P1-Villa-107,Rita Soni,Pending"); 
         list.push("P1-Villa-108,Shanky Munjal,Pending"); 
-        list.push("P1-Villa-109,Satish Kumar,Pending"); 
+        list.push("P1-Villa-109,Satish Kumar,Fees_Only"); 
         list.push("P1-Villa-110,Deepika Sharma,Pending"); 
         list.push("P1-Villa-111,Rajat Kumar Sharma,Pending"); 
 
