--- a/MonthlyCreditDebit.html
+++ b/MonthlyCreditDebit.html
@@ -65,9 +65,9 @@
             <form id="contact" action="" method="post">
                 <h3 style="color:darkgreen"> Quarterly Collection Expenditure Details</h3>
 				<br>
-                <!--<h4 style="color:darkgreen">  Society Account Details </h4>
-                <h4 style="color:darkgreen">  Account: ######### , IFSC Code: $$$$$$$$ </h4>
-                <br>-->
+                <h4 style="color:darkgreen">  Society Account Details </h4>
+                <h4 style="color:darkgreen">  Account: 7777694878 , IFSC Code: idib000n163 </h4>
+                <h4 style="color:darkgreen"> Quarterly Amount Collection 1000 </h4>
                 <h4 style="color:darkgreen">  Final Balance = <span id="TotalCollection"></span> </h4>
 
                 <h4 style="color:rgb(156, 10, 25)">  Quarterly Expenditure = <span id="TotalD"></span> </h4>
@@ -174,6 +174,7 @@
         //list.push("P1 Quarterly Collection ,Villa 65,1000,C");
         list.push("P1 Advisor charges decided in 7 april meeting,Villa 65,-1100,D");
         list.push("P1P2 Ramnavmi Celebration,Villa 65,-5693,D");
+        list.push("P1P2 Ramnavmi Celebration collection from P2,Villa 65,2277,C");
         
          generateTable(list)
          SetBalanceColor();
