--- a/MemberShip.html
+++ b/MemberShip.html
@@ -64,14 +64,16 @@
             <form id="contact" action="" method="post">
                 <h3 style="color:darkgreen"> Socity Owners MemberShip Status  </h3>
                 <br>
-                <h4 style="color:darkgreen">  Society Account Details </h4>
+                <h4 style="color:darkgreen">  Society Maintenance fund collection Account Details </h4>
                 <h4 style="color:darkgreen">  Account: 7774871568  </h4>
                 <h4 style="color:darkgreen">  IFSC Code: idib000n163 </h4>
+                <h4 style="color:darkgreen">  UPI ID: 7774871568@indianbk </h4>
+
                 <br>
                 <h4 style="color:darkgreen">  200 Rs (100/- MemberShip Fee + 100/- Registration Fee) </h4>
                 
-                <img  src="img/SV_Activit_Ac.jpg" width="108px" heigt="165px" alt="" style="margin-bottom: 22px;"> 
-
+                <img  src="img/SV_Main_Ac.jpg" width="118px" heigt="175px" alt="" style="margin-bottom: 22px;"> 
+                
 				<fieldset>
                     <label for="Name">Select Year</label>
 				   <select id="YearSelection" onChange="return displayTableData()" class="form-control"></select>
