--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -66,12 +66,16 @@
             <form id="contact" action="" method="post">
                 <h3 style="color:darkgreen"> Quarterly Society Activity Fund  </h3>
                 <br>
-                <h4 style="color:darkgreen">  Society Account Details </h4>
+                <h4 style="color:darkgreen">  Society Activity collection fund Account Details </h4>
                 <h4 style="color:darkgreen">  Account: 7777694878 , IFSC Code: idib000n163 </h4>
+                <h4 style="color:darkgreen">  UPI ID: 7777694878@indianbk </h4>
                 <h4 style="color:darkgreen"> Quarterly Amount Collection 1000 </h4>
+                <img  src="img/SV_Activit_Ac.jpg" width="118px" heigt="175px" alt="" style="margin-bottom: 22px;"> 
                 
                 <br>
-                <h4 style="color:darkgreen">  Final Balance = <span id="TotalCollection"></span> </h4>
+                <h4 style="color:darkgreen"> Till Now Total collection = <span id="TotalCollection"></span> </h4>
+
+
 				<fieldset>
                     <label for="Name">Select Year</label>
 				   <select id="YearSelection" onChange="return displayTableData()" class="form-control"></select>
