--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -63,15 +63,18 @@
             <form id="contact" action="" method="post">
                 <h3 style="color:darkgreen"> Monthly Maintenance Fund  </h3>
                 <br>
-                <h4 style="color:darkgreen">  Monthly Maintenance Details (From April 2000 from each villa)</h4>
+                <h4 style="color:darkgreen">  Monthly Maintenance Details </h4>
 
                  
                 <br>
                 <h4 style="color:darkgreen">  Final Balance = <span id="TotalCollection"></span> </h4>
                 <br>
 				
-                <h4 style="color:darkgreen">  Society Account Details </h4>
+                <h4 style="color:darkgreen">  Society Maintenance fund collection Account Details </h4>
                 <h4 style="color:darkgreen">  Account: 7774871568 , IFSC Code: idib000n163 </h4>
+                <h4 style="color:darkgreen">  UPI ID: 7774871568@indianbk </h4>
+                <img  src="img/SV_Main_Ac.jpg" width="118px" heigt="175px" alt="" style="margin-bottom: 22px;"> 
+
                 <!--<h4 style="color:darkgreen">  Cash / Online Amount to Pankaj Ji (Mobile No. 9929199901) Shubh Villa </h4>-->
                 <!--
                 <h4 style="color:darkgreen">  Cash only at Villa No. 10 </h4>
