--- a/MemberShip.html
+++ b/MemberShip.html
@@ -253,6 +253,7 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-111,Rajat Kumar Sharma,Pending"); 
 
 	 generateTable(list)  
+     SetBalanceColor();
 	}
 	
     
