--- a/MemberShip.html
+++ b/MemberShip.html
@@ -67,12 +67,12 @@
                 <h4 style="color:darkgreen">  Society Maintenance fund collection Account Details </h4>
                 <h4 style="color:darkgreen">  Account: 7774871568  </h4>
                 <h4 style="color:darkgreen">  IFSC Code: idib000n163 </h4>
-                <h4 style="color:darkgreen">  UPI ID: 7774871568@indianbk </h4>
+                <h4><span style="color:darkgreen">UPI ID: </span> <span style="color:blue">  7774871568@indianbk </span> </h4>
 
                 <br>
                 <h4 style="color:darkgreen">  200 Rs (100/- MemberShip Fee + 100/- Registration Fee) </h4>
                 
-                <img  src="img/SV_Main_Ac.jpg" width="118px" heigt="175px" alt="" style="margin-bottom: 22px;"> 
+                <img  src="img/SV_Main_Ac.jpg" width="155px" heigt="250px" alt="" style="margin-bottom: 22px;"> 
                 
 				<fieldset>
                     <label for="Name">Select Year</label>
@@ -241,7 +241,7 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-99,Sakshi Singh,Pending"); 
         list.push("P1-Villa-100,Akansha Garg,Fees_Only"); 
         list.push("P1-Villa-101,Laxmi Agarwal,Pending"); 
-        list.push("P1-Villa-102,Pratima Singh,Pending"); 
+        list.push("P1-Villa-102,Pratima Singh,Fees_Only"); 
         list.push("P1-Villa-103,Vandana Soni,Pending"); 
         list.push("P1-Villa-104,Rajender Singh,Fees_Only"); 
         list.push("P1-Villa-105,Vandana Soni,Pending"); 
