--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -72,7 +72,7 @@
 				
                 <h4 style="color:darkgreen">  Society Maintenance fund collection Account Details </h4>
                 <h4 style="color:darkgreen">  Account: 7774871568 , IFSC Code: idib000n163 </h4>
-                <h4 style="color:darkgreen">  UPI ID: 7774871568@indianbk </h4>
+                <h4><span style="color:darkgreen">UPI ID: </span> <span style="color:blue">  7774871568@indianbk </span> </h4>
                 <img  src="img/SV_Main_Ac.jpg" width="118px" heigt="175px" alt="" style="margin-bottom: 22px;"> 
 
                 <!--<h4 style="color:darkgreen">  Cash / Online Amount to Pankaj Ji (Mobile No. 9929199901) Shubh Villa </h4>-->
