--- a/MemberShip.html
+++ b/MemberShip.html
@@ -153,7 +153,7 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-10,Jogendra Sachdeva,Fees_Only"); 
         list.push("P1-Villa-11,Sundeep Mahala,Pending"); 
         list.push("P1-Villa-12,Gaurav Kothari,Fees_Only"); 
-        list.push("P1-Villa-13,Anil Sharma,Pending"); 
+        list.push("P1-Villa-13,Anil Sharma,Fees_Only"); 
         list.push("P1-Villa-14,Ayush	Shandilya,Pending"); 
         list.push("P1-Villa-15,Sunil	Kumar,Pending"); 
         list.push("P1-Villa-16,Preeti Meena,Pending"); 
@@ -173,7 +173,7 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-30,Peeyush Mathur,Pending"); 
         list.push("P1-Villa-31,Mahesh Taparia,Pending"); 
         list.push("P1-Villa-32,Peeyush Verma,Pending"); 
-        list.push("P1-Villa-33,Prakash Joshi,Pending"); 
+        list.push("P1-Villa-33,Prakash Joshi,Done"); 
         list.push("P1-Villa-34,Vijay Meena,Pending"); 
         list.push("P1-Villa-35,D V Saraswat & Kusum Saraswat,Fees_Only"); 
         list.push("P1-Villa-36,Harish Kumar Yadav,Pending"); 
@@ -204,10 +204,10 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-62,Lal Singh,Pending"); 
         list.push("P1-Villa-63,Yogesh Ji,Done"); 
         list.push("P1-Villa-64,Sahil Meghnani,Pending");
-        list.push("P1-Villa-65,Jalaj Rajpurohit,Fees_Only");
+        list.push("P1-Villa-65,Jalaj Rajpurohit,Done");
         list.push("P1-Villa-66,Manju Gehlot,Pending");
-        list.push("P1-Villa-67,Abhishek Jaiman,Fees_Only"); 
-        list.push("P1-Villa-68,Shrish Jaiman,Fees_Only"); 
+        list.push("P1-Villa-67,Abhishek Jaiman,Done"); 
+        list.push("P1-Villa-68,Shrish Jaiman,Done"); 
         list.push("P1-Villa-69,Piyush Sharma,Done"); 
         list.push("P1-Villa-70,Vineet Sharma,Done"); 
         list.push("P1-Villa-71,Suresh kumar Sharma,Pending"); 
@@ -215,8 +215,8 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-73,Richa Sharma,Done"); 
         list.push("P1-Villa-74,Praveen Kumar Prajapat,Pending"); 
         list.push("P1-Villa-75,Archna Goswami,Done"); 
-        list.push("P1-Villa-76,Surya Nagal,Pending"); 
-        list.push("P1-Villa-77,Devki Nandan Mathuriya,Fees_Only"); 
+        list.push("P1-Villa-76,Surya Nagal,Done"); 
+        list.push("P1-Villa-77,Devki Nandan Mathuriya,Done"); 
         list.push("P1-Villa-78,Akshat Mangal,Pending"); 
         list.push("P1-Villa-79,Rahul Peswani,Pending"); 
         list.push("P1-Villa-80,Rahul Peswani,Pending"); 
@@ -236,7 +236,7 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-94,Rounak Rajendra Bhatt,Pending"); 
         list.push("P1-Villa-95,Deepti Sharma,Pending"); 
         list.push("P1-Villa-96,George Pal Singh,Pending"); 
-        list.push("P1-Villa-97,Surendra Kumawat,Fees_Only"); 
+        list.push("P1-Villa-97,Surendra Kumawat,Done"); 
         list.push("P1-Villa-98,Hitesh Jain,Fees_Only"); 
         list.push("P1-Villa-99,Sakshi Singh,Pending"); 
         list.push("P1-Villa-100,Akansha Garg,Fees_Only"); 
@@ -247,7 +247,7 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-105,Vandana Soni,Pending"); 
         list.push("P1-Villa-106,Vandana Soni,Pending"); 
         list.push("P1-Villa-107,Rita Soni,Pending"); 
-        list.push("P1-Villa-108,Shanky Munjal,Pending"); 
+        list.push("P1-Villa-108,Shanky Munjal,Done"); 
         list.push("P1-Villa-109,Satish Kumar,Fees_Only"); 
         list.push("P1-Villa-110,Deepika Sharma,Pending"); 
         list.push("P1-Villa-111,Rajat Kumar Sharma,Pending"); 
