--- a/VehicleOwner.html
+++ b/VehicleOwner.html
@@ -127,12 +127,13 @@
     function getOwnerDetails(){
      var list = [];
      list.push("P1-Villa-01,@Pooja Sharma,@RJ45-CX-7410/ UP14-CV-3595,@"); 9587786161
-     list.push("P1-Villa-04,@Bhupesh Saini,@RJ06-CB-4279,@"); 9829325960
+     list.push("P1-Villa-04,@Bhupesh Saini,@RJ60-CA-3080,@"); 9829325960
      list.push("P1-Villa-07,@Rahul Pandey,@RJ45-CJ-2141,@"); 9672125813
      list.push("P1-Villa-09,@Raghvendra Sharma,@RJ45-CJ-9296,@"); 7976767857
      list.push("P1-Villa-10,@Jogendra Sachdeva,@RJ45-CP-8446,@"); 9828080386
      list.push("P1-Villa-12,@Gaurav Kothari,@RJ22-BH-5688C,@"); 9982567222
      list.push("P1-Villa-13,@Anil Sharma,@RJ14-CZ-2936,@"); 9983344889
+     list.push("P1-Villa-19,@Hitesh Sain,@RJ-02-CD-3674,@"); 9650978342
      list.push("P1-Villa-24,@Abhimanyu Saraswat,@RJ01-CC-3068/ RJ01-CE-0919/ RJ14NC4125,@"); 9461594523
      list.push("P1-Villa-26,@Rakesh Kumar,@RJ45-CH-1989,@"); 9079205061
      list.push("P1-Villa-27,@Deepesh Sharma,@RJ14-CU-6335,@"); 9829192929
@@ -149,8 +150,11 @@
      list.push("P1-Villa-46,@Vikas Mahala,@RJ18-CB-9459,@"); 8561811965
      list.push("P1-Villa-47,@Manoj ,@RJ14-QC-4216,@"); 9460070338
      list.push("P1-Villa-48,@R C Sharma ,@RJ45-CR-6566/ RJ20-CA-7231,@"); 7737061033
+     list.push("P1-Villa-50,@Abhishek Garg,@RJ14-QC-3435/ RJ29-CA-5881,@"); 9785352955
+
      list.push("P1-Villa-52,@Shailesh Bansal,@RJ45-CL-1120,@"); 9461856524
      list.push("P1-Villa-53,@Rohit Jain,@RJ45-CO-1142,@"); 9828576337
+     list.push("P1-Villa-63,@Yogesh Ji,@RJ25-CA-2876,@"); 8583956466
      list.push("P1-Villa-64,@Sahil Meghnani,@RJ45-CJ-6502/ RJ45-CV-1311,@");9929080804
      list.push("P1-Villa-65,@Jalaj Rajpurohit,@MH-46-BK-8091,@RJ14-KC-0941");
      list.push("P1-Villa-67,@Abhishek Jaiman,@,@RJ14-BH-9719"); 9414054353
@@ -158,13 +162,23 @@
      list.push("P1-Villa-69,@Piyush Sharma,@RJ45-CR-5927,@RJ60SJ3391/ RJ14HU5981"); 9828487854
      list.push("P1-Villa-71,@Suresh kumar Sharma,@RJ45-CL-6128,@"); 8875115223
      list.push("P1-Villa-76,@Surya Nagal,@RJ03-CA-8935,@RJ14KD9752"); 9460892888
+     list.push("P1-Villa-82,@Swati Bansal,@RJ45-CF-4548,@"); 9529466585
+
      list.push("P1-Villa-85,@Pradeep Verma,@RJ02-CD-8645,@"); 9460367969
-     list.push("P1-Villa-88,@Pankaj Chauhan,@RJ14NC2986,@"); 
+     list.push("P1-Villa-88,@Pankaj Chauhan,@RJ14-NC-2986/ RJ14-QK-5584,@"); 9772525987
+     list.push("P1-Villa-96,@George Pal Singh,@RJ05-CA-8316,@"); 9587865461
+
      list.push("P1-Villa-98,@Hitesh Jain,@RJ192-C-4408,@"); 9251722324
      list.push("P1-Villa-102,@Somya Chahar,@RJ05-CC-5230,@"); 8384925336
      list.push("P1-Villa-104,@Rajender Singh,@RJ45-CQ-6593,@"); 8094296135
 
+     list.push("P2-Villa-13,@Ankur Surana,@MP07-CC-6357/ HR98-D-6497,@"); 7999973434
     
+     list.push("P2-Villa-34,@Monika shahani,@HR-35-6908/ RJ14-WC-3226,@"); 8696962600
+     list.push("P2-Villa-47,@Geeta Devi,@23BH-6738-K,@"); 9414793657
+
+     list.push("P2-Villa-55,@Kriti Maheswari,@UP78-EU-4545/ UP78-EY-6363,@"); 9935031104
+     list.push("P2-Villa-66,@Lalit Kaushik,@RJ14-LC-2825,@"); 9785311511
       
      generateTable(list)
     }
