--- a/VehicleOwner.html
+++ b/VehicleOwner.html
@@ -173,7 +173,7 @@
      list.push("P1-Villa-104,@Rajender Singh,@RJ45-CQ-6593,@"); 8094296135
 
      list.push("P2-Villa-13,@Ankur Surana,@MP07-CC-6357/ HR98-D-6497,@"); 7999973434
-    
+     list.push("P2-Villa-31,@Navdeep Kumar,@DL-9CAS00812,@"); 9717781488
      list.push("P2-Villa-34,@Monika shahani,@HR-35-6908/ RJ14-WC-3226,@"); 8696962600
      list.push("P2-Villa-47,@Geeta Devi,@23BH-6738-K,@"); 9414793657
 
