--- a/VehicleOwner.html
+++ b/VehicleOwner.html
@@ -173,12 +173,15 @@
      list.push("P1-Villa-104,@Rajender Singh,@RJ45-CQ-6593,@"); 8094296135
 
      list.push("P2-Villa-13,@Ankur Surana,@MP07-CC-6357/ HR98-D-6497,@"); 7999973434
+    // list.push("P2-Villa-20,@Namita Kumawat,@,@"); 9535368318
+
      list.push("P2-Villa-31,@Navdeep Kumar,@DL-9CAS00812,@"); 9717781488
      list.push("P2-Villa-34,@Monika shahani,@HR-35-6908/ RJ14-WC-3226,@"); 8696962600
      list.push("P2-Villa-47,@Geeta Devi,@23BH-6738-K,@"); 9414793657
 
      list.push("P2-Villa-55,@Kriti Maheswari,@UP78-EU-4545/ UP78-EY-6363,@"); 9935031104
      list.push("P2-Villa-66,@Lalit Kaushik,@RJ14-LC-2825,@"); 9785311511
+     list.push("P2-Villa-71,@Preety Roy,@GJ01-RE-2362,@"); 7600006547
       
      generateTable(list)
     }
