--- a/VehicleOwner.html
+++ b/VehicleOwner.html
@@ -180,6 +180,7 @@
      list.push("P2-Villa-47,@Geeta Devi,@23BH-6738-K,@"); 9414793657
 
      list.push("P2-Villa-55,@Kriti Maheswari,@UP78-EU-4545/ UP78-EY-6363,@"); 9935031104
+     list.push("P2-Villa-62,@DeepaJai Singh,@RJ20-CF-3595,@"); 8426993330
      list.push("P2-Villa-66,@Lalit Kaushik,@RJ14-LC-2825,@"); 9785311511
      list.push("P2-Villa-71,@Preety Roy,@GJ01-RE-2362,@"); 7600006547
       
