--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -182,7 +182,7 @@
         list.push("P1-Villa-39,@Manish Salvi,@1000,@,@,@"); 
         list.push("P1-Villa-40,@Anita Kanwar,@Vacant,@,@,@"); 
         list.push("P1-Villa-41,@Monika Mittal,@Vacant,@,@,@"); 
-        list.push("P1-Villa-42,@Prakash Gaur,@1000,@,@,@"); 
+        list.push("P1-Villa-42,@Prakash Gaur,@1000,@1000,@,@"); 
         list.push("P1-Villa-43,@Arun Tripathi,@1000,@,@,@"); 
         list.push("P1-Villa-44,@Ravindra Verma,@Pending,@,@,@"); 
         list.push("P1-Villa-45,@Nand Singh Rajawat,@1000,@,@,@"); 
