--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -172,12 +172,12 @@
         list.push("P1-Villa-04,Bhupesh Saini,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-05,Shishir Maltiyar,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-06,Hemant Kumar,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-07,Rahul Pandey,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-07,Rahul Pandey,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-08,Anil Sharma,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-09,Raghvendra Sharma,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-10,Jogendra Sachdeva,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-10,Jogendra Sachdeva,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-11,Sundeep Mahala,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-12,Gaurav Kothari,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-12,Gaurav Kothari,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-13,Anil Sharma,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-14,Ayush   Shandilya,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-15,Sunil   Kumar,2000,2000,2000,,,,,,"); 
@@ -189,36 +189,36 @@
         list.push("P1-Villa-21,Dariya Singh,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-22,Shivani sanjeev sharma,,,,,,,,,"); 
         list.push("P1-Villa-23,Akshay Saraswat,,,,,,,,,"); 
-        list.push("P1-Villa-24,Abhimanyu Saraswat,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-24,Abhimanyu Saraswat,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-25,Pooja Khandelwal,,,,,,,,,"); 
-        list.push("P1-Villa-26,Rakesh Kumar,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-26,Rakesh Kumar,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-27,Deepesh Sharma,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-28,Mohit Juneja,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-28,Mohit Juneja,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-29,Lokshita Mathur,,,,,,,,,"); 
         list.push("P1-Villa-30,Peeyush Mathur,,,,,,,,,"); 
         list.push("P1-Villa-31,Mahesh Taparia,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-32,Peeyush Verma,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-33,Prakash Joshi,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-34,Vijay Meena,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-35,D V Saraswat & Kusum Saraswat,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-34,Vijay Meena,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-35,D V Saraswat & Kusum Saraswat,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-36,Harish Kumar Yadav,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-37,Gajendra Sharma,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-37,Gajendra Sharma,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-38,ManishaSingh,2000,0,0,,,,,,"); 
-        list.push("P1-Villa-39,Manish Salvi,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-39,Manish Salvi,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-40,Anita Kanwar,0,2000,2000,,,,,,"); 
         list.push("P1-Villa-41,Monika Mittal,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-42,Prakash Gaur,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-42,Prakash Gaur,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-43,Arun Tripathi,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-44,Ravindra Verma,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-45,Nand Singh Rajawat,2000,0,0,,,,,,"); 
-        list.push("P1-Villa-46,Vikas Mahala,2000,0,0,,,,,,"); 
+        list.push("P1-Villa-46,Vikas Mahala,2000,2000,0,,,,,,"); 
         list.push("P1-Villa-47,Manoj Ji,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-48,R C Sharma ,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-49,Sunita Verma,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-50,Abhishek Garg,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-51,Jatin Kumar,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-52,Shailesh Bansal,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-53,Rohit Jain,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-53,Rohit Jain,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-54,Vinod Kumar Garg,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-55,Raj Kamal,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-56_57A,Kajor Mal Goyal,2000,2000,2000,,,,,,"); 
@@ -231,24 +231,24 @@
         list.push("P1-Villa-62,Lal Singh,,,,,,,,,"); 
         list.push("P1-Villa-63,Yogesh Ji,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-64,Sahil Meghnani,2000,2000,2000,,,,,,");
-        list.push("P1-Villa-65,Jalaj Rajpurohit,2000,2000,2000,,,,,,");
+        list.push("P1-Villa-65,Jalaj Rajpurohit,2000,3000,3000,,,,,,");
         list.push("P1-Villa-66,Manju Gehlot,,,,,,,,,");
         list.push("P1-Villa-67,Abhishek Jaiman,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-68,Shrish Jaiman,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-69,Piyush Sharma,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-69,Piyush Sharma,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-70,Vineet Mahera,2000,0,0,,,,,,"); 
-        list.push("P1-Villa-71,Suresh kumar Sharma,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-71,Suresh kumar Sharma,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-72,Nikesh Chaudhary,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-73,Richa Sharma,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-73,Richa Sharma,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-74,Praveen Kumar Prajapat,,,,,,,,,"); 
-        list.push("P1-Villa-75,Archna Goswami,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-76,Surya Nagal,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-75,Archna Goswami,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-76,Surya Nagal,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-77,Devki Nandan Mathuriya,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-78,Akshat Mangal,,,,,,,,,"); 
-        list.push("P1-Villa-79,Rahul Peswani,,,,,,,,,"); 
-        list.push("P1-Villa-80,Rahul Peswani,,,,,,,,,"); 
+        list.push("P1-Villa-79,Rahul Peswani,2000,0,0,,,,,,"); 
+        list.push("P1-Villa-80,Rahul Peswani,0,0,0,,,,,,"); 
         list.push("P1-Villa-81,Mamta Sharma,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-82,Swati Bansal,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-82,Swati Bansal,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-83,Tarun Sharda,,,,,,,,,"); 
         list.push("P1-Villa-84,Tarun Sharda,,,,,,,,,"); 
         list.push("P1-Villa-85,Pradeep Verma,2000,2000,2000,,,,,,"); 
@@ -266,15 +266,15 @@
         list.push("P1-Villa-97,Surendra Kumawat,,,,,,,,,"); 
         list.push("P1-Villa-98,Hitesh Jain,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-99,Sakshi Singh,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-100,Akansha Garg,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-100,Akansha Garg,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-101,Laxmi Agarwal,,,,,,,,,"); 
         list.push("P1-Villa-102,Pratima Singh,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-103,Vandana Soni,,,,,,,,,"); 
-        list.push("P1-Villa-104,Rajender Singh,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-104,Rajender Singh,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-105,Vandana Soni,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-106,Vandana Soni,,,,,,,,,"); 
         list.push("P1-Villa-107,Rita Soni,,,,,,,,,"); 
-        list.push("P1-Villa-108,Shanky Munjal,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-108,Shanky Munjal,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-109,Satish Kumar,,,,,,,,,"); 
         list.push("P1-Villa-110,Deepika Sharma,,,,,,,,,"); 
         list.push("P1-Villa-111,Rajat Kumar Sharma,,,,,,,,,"); 
