--- a/MemberShip.html
+++ b/MemberShip.html
@@ -144,13 +144,13 @@
      var list = [];
 
 list.push("P1-Villa-01,Pooja Sharma,Pending"); 
-        list.push("P1-Villa-04,Bhupesh Saini,Fees_Only"); 
-        list.push("P1-Villa-05,Shishir Maltiyar,Fees_Only"); 
+        list.push("P1-Villa-04,Bhupesh Saini,Done"); 
+        list.push("P1-Villa-05,Shishir Maltiyar,Done"); 
         list.push("P1-Villa-06,Hemant Kumar,Pending"); 
-        list.push("P1-Villa-07,Rahul Pandey,Fees_Only"); 
-        list.push("P1-Villa-08,Anil Sharma,Fees_Only"); 
+        list.push("P1-Villa-07,Rahul Pandey,Done"); 
+        list.push("P1-Villa-08,Anil Sharma,Done"); 
         list.push("P1-Villa-09,Raghvendra Sharma,Pending"); 
-        list.push("P1-Villa-10,Jogendra Sachdeva,Fees_Only"); 
+        list.push("P1-Villa-10,Jogendra Sachdeva,Done"); 
         list.push("P1-Villa-11,Sundeep Mahala,Pending"); 
         list.push("P1-Villa-12,Gaurav Kothari,Fees_Only"); 
         list.push("P1-Villa-13,Anil Sharma,Fees_Only"); 
@@ -164,36 +164,36 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-21,Dariya Singh,Pending"); 
         list.push("P1-Villa-22,Shivani sanjeev sharma,Pending"); 
         list.push("P1-Villa-23,Akshay Saraswat,Pending"); 
-        list.push("P1-Villa-24,Abhimanyu Saraswat,Pending"); 
+        list.push("P1-Villa-24,Abhimanyu Saraswat,Done"); 
         list.push("P1-Villa-25,Pooja Khandelwal,Pending"); 
         list.push("P1-Villa-26,Rakesh Kumar,Fees_Only"); 
-        list.push("P1-Villa-27,Deepesh Sharma,Fees_Only"); 
+        list.push("P1-Villa-27,Deepesh Sharma,Done"); 
         list.push("P1-Villa-28,Mohit Juneja,Fees_Only"); 
         list.push("P1-Villa-29,Lokshita Mathur,Pending"); 
         list.push("P1-Villa-30,Peeyush Mathur,Pending"); 
         list.push("P1-Villa-31,Mahesh Taparia,Pending"); 
         list.push("P1-Villa-32,Peeyush Verma,Pending"); 
         list.push("P1-Villa-33,Prakash Joshi,Done"); 
-        list.push("P1-Villa-34,Vijay Meena,Pending"); 
-        list.push("P1-Villa-35,D V Saraswat & Kusum Saraswat,Fees_Only"); 
+        list.push("P1-Villa-34,Vijay Meena,Done"); 
+        list.push("P1-Villa-35,D V Saraswat & Kusum Saraswat,Done"); 
         list.push("P1-Villa-36,Harish Kumar Yadav,Pending"); 
-        list.push("P1-Villa-37,Gajendra Sharma,Fees_Only"); 
+        list.push("P1-Villa-37,Gajendra Sharma,Done"); 
         list.push("P1-Villa-38,ManishaSingh,Pending"); 
-        list.push("P1-Villa-39,Manish Salvi,Fees_Only"); 
+        list.push("P1-Villa-39,Manish Salvi,Done"); 
         list.push("P1-Villa-40,Anita Kanwar,Pending"); 
         list.push("P1-Villa-41,Monika Mittal,Pending"); 
-        list.push("P1-Villa-42,Prakash Gaur,Fees_Only"); 
-        list.push("P1-Villa-43,Arun Tripathi,Pending"); 
-        list.push("P1-Villa-44,Ravindra Verma,Pending"); 
-        list.push("P1-Villa-45,Nand Singh Rajawat,Pending"); 
+        list.push("P1-Villa-42,Prakash Gaur,Done"); 
+        list.push("P1-Villa-43,Arun Tripathi,Form_Only"); 
+        list.push("P1-Villa-44,Ravindra Verma,Form_Only"); 
+        list.push("P1-Villa-45,Nand Singh Rajawat,Form_Only"); 
         list.push("P1-Villa-46,Vikas Mahala,Fees_Only"); 
-        list.push("P1-Villa-47,Manoj Ji,Pending"); 
-        list.push("P1-Villa-48,R C Sharma ,Pending"); 
+        list.push("P1-Villa-47,Manoj Ji,Form_Only"); 
+        list.push("P1-Villa-48,R C Sharma ,Form_Only"); 
         list.push("P1-Villa-49,Sunita Verma,Pending"); 
         list.push("P1-Villa-50,Abhishek Garg,Pending"); 
         list.push("P1-Villa-51,Jatin Kumar,Pending"); 
-        list.push("P1-Villa-52,Shailesh Bansal,Fees_Only"); 
-        list.push("P1-Villa-53,Rohit Jain,Fees_Only"); 
+        list.push("P1-Villa-52,Shailesh Bansal,Done"); 
+        list.push("P1-Villa-53,Rohit Jain,Done"); 
         list.push("P1-Villa-54,Vinod Kumar Garg,Pending"); 
         list.push("P1-Villa-55,Raj Kamal,Pending"); 
         list.push("P1-Villa-56_57A,Kajor Mal Goyal,Pending"); 
@@ -218,16 +218,16 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-76,Surya Nagal,Done"); 
         list.push("P1-Villa-77,Devki Nandan Mathuriya,Done"); 
         list.push("P1-Villa-78,Akshat Mangal,Pending"); 
-        list.push("P1-Villa-79,Rahul Peswani,Pending"); 
+        list.push("P1-Villa-79,Rahul Peswani,Done"); 
         list.push("P1-Villa-80,Rahul Peswani,Pending"); 
         list.push("P1-Villa-81,Mamta Sharma,Pending"); 
-        list.push("P1-Villa-82,Swati Bansal,Fees_Only"); 
+        list.push("P1-Villa-82,Swati Bansal,Done"); 
         list.push("P1-Villa-83,Tarun Sharda,Pending"); 
         list.push("P1-Villa-84,Tarun Sharda,Pending"); 
         list.push("P1-Villa-85,Pradeep Verma,Pending"); 
         list.push("P1-Villa-86,Surendra Agrawal,Fees_Only"); 
         list.push("P1-Villa-87,Devendra Singh,Pending"); 
-        list.push("P1-Villa-88,Pankaj Chauhan & Pushpa Tomar,Fees_Only"); 
+        list.push("P1-Villa-88,Pankaj Chauhan & Pushpa Tomar,Done"); 
         list.push("P1-Villa-89,Khem Chand Nagal,Pending"); 
         list.push("P1-Villa-90,Vivek Dubey,Pending"); 
         list.push("P1-Villa-91,Rajendra Prasad Gupta,Pending"); 
